--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@tsparticles/engine": "^3.8.1",
     "aos": "^2.3.4",
+    "ng-particles": "^3.12.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@angular/build": "^20.0.5",
