--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.0.0",
     "@tsparticles/engine": "^3.8.1",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "ng-particles": "^3.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
