--- a/angular.json
+++ b/angular.json
@@ -22,12 +22,19 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "robots.txt",
+                "input": "public",
+                "output": "/"
+              },
+              {
+                "glob": "sitemap.xml",
+                "input": "public",
+                "output": "/"
+              }
             ],
-            "styles": [
-              "node_modules/aos/dist/aos.css",
-              "src/styles.scss"
-            ]
+            "styles": ["node_modules/aos/dist/aos.css", "src/styles.scss"]
           },
           "configurations": {
             "production": {
@@ -73,14 +80,8 @@
           "options": {
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "node_modules/aos/dist/aos.css",
-              "src/styles.scss"
-            ]
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["node_modules/aos/dist/aos.css", "src/styles.scss"]
           }
         }
       }
